--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "description": "Committee element for WISVCH",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jeroentjuuhh/committee-template.git"
+  },
+  "homepage": "https://github.com/jeroentjuuhh/committee-template#readme",
   "name": "@polyer/committee-template",
   "resolutions": {
     "inherits": "2.0.3",
@@ -22,14 +27,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jeroentjuuhh/committee-template.git"
-  },
   "author": "jeroentjuuhh",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jeroentjuuhh/committee-template/issues"
-  },
-  "homepage": "https://github.com/jeroentjuuhh/committee-template#readme"
+  }
 }
